# physgame-benchmark

./: .gitignore  README.md  eval_local_model.py  eval_online_model.py  eval_vllm_model.py  pyproject.toml  requirements.txt
benchmark/: __init__.py  dataset.py  utils.py
benchmark/profiles/: __init__.py  analysis_profile.py  base_profile.py  utils.py  zero_shot_profile.py
physgame_benchmark/: __init__.py  conversation.py  dataset.py  result_manager.py  utils.py
physgame_benchmark/profiles/: __init__.py  analysis_profile.py  analysis_video_profile.py  base_profile.py  utils.py  zero_shot_profile.py  zero_shot_video_profile.py
scripts/: eval_local_model.sh  eval_online_model.sh  eval_vllm_model.sh  launch_vllm_serve.sh  prepare_env.sh
