[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "physgame-benchmark"
version = "0.0.0"
dependencies = [
    "accelerate==1.6.0",
    "flash_attn==2.7.4.post1",
    "openai==1.70.0",
    "opencv-python==4.11.0.86",
    "pillow==11.1.0",
    "python-dotenv==1.1.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tqdm==4.67.1",
    "transformers==4.51.0",
]
requires-python = ">=3.12"
